Include regression table

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2020-09-12 22:02:10 Romain>
+% Time-stamp: <2020-09-12 22:38:41 Romain>
 % Beamer template for the Macro Stress-Testing Article
 % August 2020
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -88,7 +88,7 @@ A Risk-Based Framework}
 \author[]{Romain Lafarguette \and Romain Veyrune}
 \institute[]{MCM Central Bank Operations Division}
 
-\date[]{\scriptsize This version: \today \\ \vspace{0.5cm} \scriptsize{\textit{The views
+\date[]{\scriptsize September 16, 2020 \\ \vspace{0.5cm} \scriptsize{\textit{The views
       expressed in this presentation do not necessarily represent the views of
       the IMF, its Executive Board, or IMF management.}} \vspace{-0.3cm}}
 
@@ -147,10 +147,10 @@ We propose an FX intervention rule based on \textbf{Conditional Value at Risk}
 \end{frame}
 
 
-\begin{frame}
+\begin{frame}{Regression Table}
 \setlength\tabcolsep{2pt}  % default value: 6pt
 \tiny  %%  command to change the font size
-\input{../output/regressions_table.tex}
+\input{../output/regressions_table_short.tex}
   \end{frame}
 
 
