--- a/output/regressions_table.tex
+++ b/output/regressions_table.tex
@@ -1,26 +1,26 @@
 \begin{tabular}{lllllll}
 \toprule
-{} &             Constant &       Microstructure &                   CIP &                  FXI &              Baseline &           Robustness \\
+{} &      Constant & Microstructure &            CIP &            FXI &        Baseline &     Robustness \\
 \midrule
-Intercept                                  &     1.089 \textbackslash n (0.157) &    -2.163 \textbackslash n (0.164) &      2.153 \textbackslash n (0.305) &    1.674*** \textbackslash n (0.0) &      1.635 \textbackslash n (0.449) &    1.638*** \textbackslash n (0.0) \\
-Lag FX log returns                         &    0.085*** \textbackslash n (0.0) &     0.08*** \textbackslash n (0.0) &     0.078*** \textbackslash n (0.0) &    0.077*** \textbackslash n (0.0) &     0.078*** \textbackslash n (0.0) &     0.08*** \textbackslash n (0.0) \\
-Bid-ask spread abs value                   &                      &    0.107** \textbackslash n (0.01) &   0.145*** \textbackslash n (0.001) &    0.136*** \textbackslash n (0.0) &   0.149*** \textbackslash n (0.001) &     0.15*** \textbackslash n (0.0) \\
-Forward points first difference            &                      &    0.322*** \textbackslash n (0.0) &     0.319*** \textbackslash n (0.0) &    0.317*** \textbackslash n (0.0) &     0.269*** \textbackslash n (0.0) &    0.269*** \textbackslash n (0.0) \\
-Interbank rate vs Libor                    &                      &                      &  -1.108*** \textbackslash n (0.004) &   -0.982*** \textbackslash n (0.0) &  -1.023*** \textbackslash n (0.009) &    -1.03*** \textbackslash n (0.0) \\
-FX intervention in USD lag                 &                      &                      &                       &     0.043 \textbackslash n (0.135) &       0.042 \textbackslash n (0.14) &                      \\
-VIX first diff                             &                      &                      &                       &                      &     9.779*** \textbackslash n (0.0) &    9.794*** \textbackslash n (0.0) \\
-EURUSD log returns                         &                      &                      &                       &                      &      0.13*** \textbackslash n (0.0) &    0.131*** \textbackslash n (0.0) \\
-FX intervention dummy lag                  &                      &                      &                       &                      &                       &     4.131 \textbackslash n (0.218) \\
-Omega                                      &  0.148*** \textbackslash n (0.001) &  0.138*** \textbackslash n (0.004) &   0.128*** \textbackslash n (0.006) &  0.125*** \textbackslash n (0.006) &   0.144*** \textbackslash n (0.006) &  0.144*** \textbackslash n (0.006) \\
-Alpha                                      &    0.171*** \textbackslash n (0.0) &    0.187*** \textbackslash n (0.0) &     0.183*** \textbackslash n (0.0) &    0.183*** \textbackslash n (0.0) &      0.19*** \textbackslash n (0.0) &    0.189*** \textbackslash n (0.0) \\
-Gamma                                      &    0.063*** \textbackslash n (0.0) &    0.056*** \textbackslash n (0.0) &     0.056*** \textbackslash n (0.0) &    0.055*** \textbackslash n (0.0) &     0.046*** \textbackslash n (0.0) &    0.046*** \textbackslash n (0.0) \\
-Beta                                       &    0.982*** \textbackslash n (0.0) &    0.984*** \textbackslash n (0.0) &     0.985*** \textbackslash n (0.0) &    0.985*** \textbackslash n (0.0) &     0.983*** \textbackslash n (0.0) &    0.983*** \textbackslash n (0.0) \\
-Nu                                         &    8.806*** \textbackslash n (0.0) &    9.107*** \textbackslash n (0.0) &     9.182*** \textbackslash n (0.0) &    9.152*** \textbackslash n (0.0) &     7.771*** \textbackslash n (0.0) &    7.773*** \textbackslash n (0.0) \\
-Lambda                                     &    0.132*** \textbackslash n (0.0) &    0.113*** \textbackslash n (0.0) &     0.115*** \textbackslash n (0.0) &    0.116*** \textbackslash n (0.0) &     0.097*** \textbackslash n (0.0) &    0.098*** \textbackslash n (0.0) \\
-R2                                         &                0.4 \% &                4.9 \% &                 5.1 \% &                5.1 \% &                14.3 \% &               14.3 \% \\
-R2 adjusted                                &                0.4 \% &                4.8 \% &                 5.0 \% &                5.0 \% &                14.2 \% &               14.1 \% \\
-Number of observations                     &                 4511 &                 4511 &                  4511 &                 4510 &                  4510 &                 4510 \\
-Pvalue in parenthesis                      &                      &                      &                       &                      &                       &                      \\
-Significance thresholds: *10\%, **5\%, ***1\% &                      &                      &                       &                      &                       &                      \\
+Intercept                       &    1.09(0.16) &    -2.16(0.16) &      2.15(0.3) &   1.67***(0.0) &      1.63(0.45) &   1.64***(0.0) \\
+Lag FX log returns              &  0.09***(0.0) &   0.08***(0.0) &   0.08***(0.0) &   0.08***(0.0) &    0.08***(0.0) &   0.08***(0.0) \\
+Bid-ask spread abs value        &               &   0.11**(0.01) &   0.15***(0.0) &   0.14***(0.0) &    0.15***(0.0) &   0.15***(0.0) \\
+Forward points first difference &               &   0.32***(0.0) &   0.32***(0.0) &   0.32***(0.0) &    0.27***(0.0) &   0.27***(0.0) \\
+Interbank rate vs Libor         &               &                &  -1.11***(0.0) &  -0.98***(0.0) &  -1.02***(0.01) &  -1.03***(0.0) \\
+FX intervention in USD lag      &               &                &                &     0.04(0.14) &      0.04(0.14) &                \\
+VIX first diff                  &               &                &                &                &    9.78***(0.0) &   9.79***(0.0) \\
+EURUSD log returns              &               &                &                &                &    0.13***(0.0) &   0.13***(0.0) \\
+FX intervention dummy lag       &               &                &                &                &                 &     4.13(0.22) \\
+Omega                           &  0.15***(0.0) &   0.14***(0.0) &  0.13***(0.01) &  0.13***(0.01) &   0.14***(0.01) &  0.14***(0.01) \\
+Alpha                           &  0.17***(0.0) &   0.19***(0.0) &   0.18***(0.0) &   0.18***(0.0) &    0.19***(0.0) &   0.19***(0.0) \\
+Gamma                           &  0.06***(0.0) &   0.06***(0.0) &   0.06***(0.0) &   0.05***(0.0) &    0.05***(0.0) &   0.05***(0.0) \\
+Beta                            &  0.98***(0.0) &   0.98***(0.0) &   0.98***(0.0) &   0.99***(0.0) &    0.98***(0.0) &   0.98***(0.0) \\
+Nu                              &  8.81***(0.0) &   9.11***(0.0) &   9.18***(0.0) &   9.15***(0.0) &    7.77***(0.0) &   7.77***(0.0) \\
+Lambda                          &  0.13***(0.0) &   0.11***(0.0) &   0.12***(0.0) &   0.12***(0.0) &     0.1***(0.0) &    0.1***(0.0) \\
+R2                              &         0.4 \% &          4.9 \% &          5.1 \% &          5.1 \% &          14.3 \% &         14.3 \% \\
+R2 adjusted                     &         0.4 \% &          4.8 \% &          5.0 \% &          5.0 \% &          14.2 \% &         14.1 \% \\
+Number of observations          &          4511 &           4511 &           4511 &           4510 &            4510 &           4510 \\
+Pvalue in parenthesis           &               &                &                &                &                 &                \\
+Significance *10\%, **5\%, ***1\%  &               &                &                &                &                 &                \\
 \bottomrule
 \end{tabular}
