Fix positioning in benchmarking part

--- a/latex/slides.tex
+++ b/latex/slides.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2020-09-13 01:24:43 Romain>
+% Time-stamp: <2020-09-13 01:31:08 Romain>
 % Beamer template for the Macro Stress-Testing Article
 % August 2020
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -263,7 +263,7 @@ We propose an FX intervention rule based on \textbf{Conditional Value-at-Risk}
 
 
 \begin{frame}
-  \frametitle{Rule-Based Benchmarking: Historical Interventions}
+  \frametitle{Rule-Based Benchmarking}
     \makebox[\linewidth]{\includegraphics[width=\paperwidth]{benchmark_minprice.pdf}}
 \end{frame}
 
@@ -275,7 +275,7 @@ We propose an FX intervention rule based on \textbf{Conditional Value-at-Risk}
 
 
 \begin{frame}
-  \frametitle{Discretion-Based Benchmarking: Historical Interventions}
+  \frametitle{Discretion-Based Benchmarking}
     \makebox[\linewidth]{\includegraphics[width=\paperwidth]{benchmark_no_minprice.pdf}}
 \end{frame}
 
