--- a/latex/slides.tex
+++ b/latex/slides.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2020-09-14 01:28:17 Romain>
+% Time-stamp: <2020-09-14 09:47:02 Romain>
 % Beamer template for the Macro Stress-Testing Article
 % August 2020
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -205,15 +205,17 @@ We propose an FX intervention rule based on \textbf{Conditional Value-at-Risk}
 
 \begin{frame}{A Risk-Management Approach to FX Interventions}
   \begin{largeitemize}
-    \item Under this framework, central bank interventions prevent FX tail
-      risks to occur
+    \item Hedging tail-risks might not be available:
+      incomplete markets
+    \item However, the central bank doesn't substitute to the market to
+      provide hedge instruments in general
     \item This rule allows flexible exchange rate to act as a shock absorber:
-      don't prevent FX variation 
+      provides more flexibility in crisis time
     \item The central bank risk tolerance should be fixed in accordance with the
       macrofinancial risk in the economy (unhedged exposures from resident agents, degree of
       dollarization, etc.) as well as market resilience
     \item The financial stability mandate of the central bank is properly
-      formalized and quantified. Aligned with industries' practice in risk management.
+      formalized and quantified via VaR metric. Aligned with industries' practice in risk management.
   \end{largeitemize}
   
 \end{frame}
@@ -221,7 +223,7 @@ We propose an FX intervention rule based on \textbf{Conditional Value-at-Risk}
 
 \begin{frame}{Features}
   \begin{largeenumerate}
-    \item Prevent moral hazard and market manipulation, and align the financi
+    \item 
     
     \item This rule guarantees that the interventions will occur with a \textbf{fixed
         frequency} over the medium term
